# DevLife-telegram-bot

backend/: .env.sample  Cargo.toml  README.md  docker-compose.yaml
backend/src/: app.rs  error.rs  main.rs  socket.rs
backend/src/controllers/: mod.rs  team_controller.rs  users_controller.rs
backend/src/db/: init_mongodb.rs  mod.rs
backend/src/middlewares/: error.rs
backend/src/models/: mod.rs  team_model.rs  users_model.rs
backend/src/postman/team/: team.post.http
backend/src/postman/user/: user.post.http
backend/src/routes/: mod.rs
backend/src/routes/teams/: mod.rs
backend/src/routes/users/: mod.rs
backend/src/services/: mod.rs  team_service.rs  user_service.rs
bot/: package-lock.json  package.json  pnpm-lock.yaml
bot/src/: bot.ts  config.ts  main.ts
frontend/: .env.sample  .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  socket.ts
frontend/src/abi/: RealBuilderSBT.ts
frontend/src/api/: WalletAPI.tsx  socket-and-server-api.ts
frontend/src/components/: ActionModal.tsx  FakeHome.tsx  Header.tsx  Knowledge.tsx  ProfileModal.tsx  SubKnowledge.tsx  styles.css
frontend/src/constants/: index.ts
frontend/src/contexts/: AuthProvider.tsx
frontend/src/data/: WalletData.tsx
frontend/src/enums/: index.ts
frontend/src/hooks/: useDevicePixelRatio.ts  useScreen.ts
frontend/src/layout/: ConnectLocks.tsx  Team.tsx
frontend/src/lib/: magic.tsx
frontend/src/pages/: Home.tsx  (+1 more)
game/: README.md
game/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
(+173 files in other folders)
