[package]
name = "devlife-anglehack-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = {version = "0.4.38",features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3.30"
mongodb = {version = "2.8.2"}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
socketioxide = {version = "0.13.1", features = ["tracing"]}
thiserror = "1.0.61"
tokio = {version = "1.38.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["trace", "cors", "compression-br", "decompression-br"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
